# 2nd-3laba

./: README.md
C++/: CMakeLists.txt  array.h  binary_tree.cpp  binary_tree.h  coverage.functions.html  coverage.html  data_structures.h  doubly_linked_list.cpp  doubly_linked_list.h  fix_coverage.sh  generate_final_report.sh  hash_table.cpp  hash_table.h  main.cpp  safe_coverage.sh  serialization.cpp  serialization.h  singly_linked_list.cpp  singly_linked_list.h  stack.cpp  stack.h  tests.cpp
GO/: BinaryTree.go  DoublyLinkedList.go  HashTable.go  Serialization.go  SinglyLinkedList.go  array.go  coverage.html  coverage.out  datastructures_test.go  main.go  stack.go
